deploy/k8s/ingress-apis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-boreal-ingress
  namespace: cafe-boreal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/catalog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catalog-service
            port:
              number: 3001
      - path: /api/orders(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-service
            port:
              number: 3002
      - path: /api/customers(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: customers-service
            port:
              number: 3003
